# OpenCV

Chapter01/: CMakeLists.txt  Chapter01.kdev4  mat.cpp
Chapter02/: CMakeLists.txt  Chapter02.kdev4  draw.cpp
Chapter03/: CMakeLists.txt  Chapter03.kdev4  README.txt  noise.cpp  scan.cpp
Chapter04/: CMakeLists.txt  Chapter04.kdev4  addImages.cpp  remapping.cpp  setadd.cpp
Chapter05/: CMakeLists.txt  Chapter05.kdev4  colorDetection.cpp  colordetector.cpp  colordetector.h
Chapter06/: CMakeLists.txt  Chapter06.kdev4  extractObject.cpp
